--- a/SiteWeb/contacter.html
+++ b/SiteWeb/contacter.html
@@ -13,25 +13,26 @@
         <nav>
           <ul class="ulNavBar">
             <li><a href="contacter.html">Contacter</a></li>
+            <li><a href="conseils.html">Conseils</a></li>
             <li><a href="workflow.html">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
+            <li><a href="environnement.html">Environnement</a></li>
             <li><a href="index.html" class="active">GIT</a></li>
         </ul>
         </nav>
       </header>
-      <section>
-        <div id="millieu" class="entete">
-          <p>"Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development" - git-scm.com</p>
+<br><br>
+        <div id="notes">
+            <h1>
+                Tomy Roy
+                <br><br>
+                Sunny Cliche
+                <br><br>
+                Anthony Côté
+            </h1>
         </div>
-      </section>
-      <section>
-        <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
-      </section>
-      <section>
-        <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
-            On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de constOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. POn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrerOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues
-      </section>
+
   </body>
 
 </html>
