--- a/SiteWeb/index.html
+++ b/SiteWeb/index.html
@@ -14,25 +14,61 @@
         <nav>
           <ul class="ulNavBar">
             <li><a href="contacter.html">Contacter</a></li>
+            <li><a href="conseils.html">Conseils</a></li>
             <li><a href="workflow.html">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
+            <li><a href="environnement.html">Environnement</a></li>
             <li><a href="index.html" class="active">GIT</a></li>
         </ul>
         </nav>
       </header>
       <section>
         <div id="millieu" class="entete">
-          <p>"Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development" - git-scm.com</p>
+          <p>
+          Crée en deux semaines par Linus Torvald, le créateur de Linux en 2005, pour la gestion du noyau de Linux. Il l'a créé car il n'aimait pas les SCM de l'époque et plusieurs personnes utilisaient encore des fichiers compressé pour se partager le code
+        </p>
         </div>
       </section>
       <section id="wrapper1" class="wrapper">
         <button id="button1" class="button"><span>Survol de GIT</span></button>
-        <p id="paragraphe1id" class="hidden">Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.ipsum dolor sit amet, consectetur adipisicing elit. Laborum repudiandae, itaque esse facilis, provident voluptates praesentium corporis quo, consequuntur, quasi fugit eligendi beatae aliquid voluptatibus amet! Et at voluptates voluptatibus.</p>
+        <p id="paragraphe1id" class="hidden">
+            <div id="notes">
+        <h3>Git est un systeme de controle de version.</h3>
+    <p>
+    On peux voir ca comme un systeme de backup de fichier code source. Sauf qu'au lieu d'etre un back-up, la version distante est la version principale, qu'on appelle Master. On essaye toujours de garder la version la plus stable et avancé sur le master.
+    <br><br>
+    Si vous devenez un développeur, vous allez avoir besoin d'apprendre git, c'est une certitude. Si vous etes en réseau, vous allez probablement avoir a installer git sur un réseau et vous allez peux-etre aussi l'utiliser pour versionner vos scripts.
+</p>
+</div>
+</p>
       </section>
       <section id="wrapper2" class="wrapper">
         <button id="button2" class="button"><span>Pourquoi l'utiliser</span></button>
-            <p id="paragraphe2id" class="hidden">On sait depuis longtemps que travailler construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues<p>
+            <p id="paragraphe2id" class="hidden">
+
+
+<div id="notes">
+    <p>
+        Imaginez que vous etes en train de créer un programme;
+<br><br>
+        Quand vous etes le seul a programmer, il y a une seule version du code; c'est facile a gérer. Si vous etes deux, vous avez deux versions différente, et un lien de transfert de code. A trois, vous avez trois liens de transfert. A 4, il y a 6 lien de transfert; la complexité augmente rapidement.
+<br><br>
+        Pour régler le probleme, vous décider d'utiliser un seul projet que vous travailler tous a distance dessus. Un peu comme Google Docs. Il y a une seule version, mais quand vous etes en train de débugger il risque d'y avoir qqn d'autre qui va modifier le code en meme temps. Et ca va faire planter votre débuggage. Vous devez trouvez une autre solution.
+<br><br>
+        Au lieu d'envoyer le code a tout le monde, vous centralisez la fusion de code. Tout le monde, fusionne son code avec un seul projet. C'est un reseau en étoile. Et ca fonctionne bien, jusqu'a temps que vous soyez 50 développeurs sur le meme projet. Vous allez donc diviser la version centrale en plusieurs branches qui ont des responsabilités distinctes.
+<br><br>
+        Et puisque ce n'était pas assez complexe, n'oubliez pas de prendre en compte que toutes ces versions changent dans le temps, donc on a encore plus de version différentes.
+    </p>
+    <h3>Creation:<h3>
+    <p>
+        
+    </p>
+
+
+
+</div>
+<p>
       </section>
       <div id="what"></div>
   </body>
