--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -15,9 +15,11 @@
       <nav>
         <ul class="ulNavBar">
           <li><a href="contacter.html">Contacter</a></li>
+          <li><a href="conseils.html">Conseils</a></li>
           <li><a href="workflow.html">Workflow</a></li>
           <li><a href="commandes.html">Commandes</a></li>
           <li><a href="installation.html" class="active">Installation</a></li>
+          <li><a href="environnement.html">Environnement</a></li>
           <li><a href="index.html">GIT</a></li>
         </ul>
       </nav>
